# mobile-robot-3

./: CMakeLists.txt  package.xml
config/: robot_control.yaml
launch/: display.launch  gazebo.launch  robot_control.launch
meshes/: base_link.STL  left_wheel.STL  right_wheel.STL
scripts/: Hello_world_pub.py  camera_read.py
urdf/: mobile_robot3.csv  mobile_robot3.urdf
