<package format="2">
  <name>mobile_robot3</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for mobile_robot3</p>
    <p>This package contains configuration data, 3D models and launch files
for mobile_robot3 robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>cv_bridge</build_depend>
  <export>
    <architecture_independent />
  </export>
</package>